tests/ui/suggestions/issue-105226.stderr
error: non-item in item list
  --> $DIR/issue-105226.rs:7:56
   |
LL | impl S {
   |        - item list starts here
LL |     fn hello<P>(&self, val: &P) where P: fmt::Display; {
   |                                                        ^ non-item starts here
...
LL | }
   | - item list ends here
   |
help: consider removing this semicolon
   |
LL -     fn hello<P>(&self, val: &P) where P: fmt::Display; {
LL +     fn hello<P>(&self, val: &P) where P: fmt::Display {
   |

error: associated function in `impl` without body
  --> $DIR/issue-105226.rs:7:5
   |
LL |     fn hello<P>(&self, val: &P) where P: fmt::Display; {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
help: provide a definition for the function
   |
LL |     fn hello<P>(&self, val: &P) where P: fmt::Display { <body> } {
   |                                                       ~~~~~~~~~~

error: associated function in `impl` without body
  --> $DIR/issue-105226.rs:15:5
   |
LL |     fn hello_empty<P>(&self, val: &P) where P: fmt::Display;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
help: provide a definition for the function
   |
LL |     fn hello_empty<P>(&self, val: &P) where P: fmt::Display { <body> }
   |                                                             ~~~~~~~~~~

error: aborting due to 3 previous errors

